Code clean up, added exceptions and listeners